# symphony-dbcli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  SOURCES_AND_WORK_ITEMS.md  WORKFLOW.md  alembic.ini  pyproject.toml  spec.md
deploy/systemd/: symphony-dbcli.service.in
migrations/: env.py  script.py.mako
migrations/versions/: 0003_work_items.py  0006_work_item_run_runtime_links.py
scripts/: provision-exedev-vm.sh
src/symphony_dbcli/: actions.py  ask.py  chats.py  cli.py  clock.py  config.py  dashboard.py  db.py  e2e.py  env.py  github.py  github_app.py  github_auth.py  gitops.py  models.py  orchestrator.py  primitive_executor.py  review_actions.py  runner.py  runtime.py  search.py  sources.py  store.py  supervisor.py  work_items.py  worker_prompt.py  workflow_definition.py  workflow_edit.py  workflow_engine.py  workflow_visualization.py  worktree.py
src/symphony_dbcli/static/: dashboard.css
src/symphony_dbcli/templates/: _draft_replies.html  attempt.html  base.html  github_app_callback.html  index.html  issue.html  workflow_edit.html
src/symphony_dbcli/web/: app.py  dependencies.py  result_formatting.py  runtime_views.py
src/symphony_dbcli/web/routers/: api.py  ask.py  attempts.py  board.py  chats.py  operations.py  settings.py  sources.py  work_items.py  workers.py  workflow.py
src/symphony_dbcli/web/static/: web.css  web.js
src/symphony_dbcli/web/templates/: _draft_replies.html  _formatted_result.html  _time.html  base.html
src/symphony_dbcli/web/templates/ask/: index.html
src/symphony_dbcli/web/templates/attempts/: _adjustment_form.html  _adjustment_modal.html  detail.html
src/symphony_dbcli/web/templates/board/: _sync_sources_control.html  _ticket_form.html  _ticket_modal.html  index.html  ticket_new.html
tests/: test_actions.py  test_ask.py  test_chats.py  test_cli.py  test_config.py  test_dashboard.py  test_db.py  test_e2e.py  test_env.py  test_github_app.py  test_gitops.py  test_orchestrator.py  test_primitive_executor.py  test_review_actions.py  test_runner.py  test_runtime.py  test_store.py  test_supervisor.py  test_web_app.py  test_worker_prompt.py  test_workflow_edit.py  test_workflow_engine.py  test_workflow_visualization.py  test_worktree.py
(+22 files in other folders)
